--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "http://lukejohnsen.github.io/react-portfolio",
+  "private": false,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
@@ -12,8 +11,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "gsap-trial": "^3.10.4",
-    "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.0",
@@ -21,7 +18,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.3",
-    "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
-    "prettier": "2.7.0"
+    "gh-pages": "^4.0.0"
   }
 }
